--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-[file name]: deepseek_html_20251116_764997.html
+[file name]: index.html
 [file content begin]
 <!DOCTYPE html>
 <html lang="id">
@@ -746,8 +746,7 @@
         // =============================================
         // KONFIGURASI BACKEND - UPDATED FOR RAILWAY
         // =============================================
-        // GANTI URL DI BAWAH INI DENGAN URL RAILWAY ANDA SETELAH DEPLOY
-        const BACKEND_URL = 'https://las-valkyrie-backend.railway.app'; // GANTI DENGAN URL RAILWAY ANDA
+        const BACKEND_URL = 'https://las-valkyrie-backend-production.up.railway.app';
         const API_BASE_URL = `${BACKEND_URL}/api`;
         const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1439123987270467697/6rAZELQSz5FN2CbLDEVDgXUgB72Dc5Rcz7abySrtq5nc57ZnZgOOl70pLDBwnHkmWT6U";
 
